--- a/demo/triangle.html
+++ b/demo/triangle.html
@@ -17,8 +17,10 @@
   .triangle-box {
     margin: auto;
     margin-top: 30px;
-    width: 100px;
-    height: 100px;
-    border: solid 1px;
+    width: 0;
+    height: 0;
+    border: solid transparent 30px;
+   border-bottom-width: 19px;
+    border-bottom-color: #064420;
   }
 </style>
