--- a/assets/demo/js-calculate-file-size.html
+++ b/assets/demo/js-calculate-file-size.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>File Size</title>
 </head>
+
 <body>
     <input type="file" id="file">
-<p>File size:</p>
+    <p id="file-size-text">File size:</p>
 </body>
+
 </html>
 <script>
-var fileInputDom = document.getElementById('file');
-fileInputDom.addEventListener('change', (event)=> {
-    fileChange(event);
-})
-function fileChange(event) {
-    if(event.target.files.length) {
-        console.log('123'); 
+    var fileInputDom = document.getElementById('file');
+    fileInputDom.addEventListener('change', (event) => {
+        fileChange(event);
+    })
+    function fileChange($event) {
+        if ($event.target.files.length) {
+            const sizeStr = calFileSize($event.target.files[0].size);
+            const fileText = document.getElementById('file-size-text');
+            fileText.textContent = `File size: ${sizeStr}`;
+        }
+
     }
 
-}
-
-function calFileSize(sizeInBytes) {
-
-}
+    function calFileSize(sizeInBytes) {
+        const fileSizeExt = new Array('Bytes', 'KB', 'MB', 'GB');
+        let i = 0;
+        while (sizeInBytes > 1023) {
+            sizeInBytes /= 1024;
+            i++;
+        }
+        return ((Math.round(sizeInBytes * 100) / 100) + ' ' + fileSizeExt[i]);
+    }
 </script>
